@@ -1,2 +1,13 @@
 # GestoreLibreria
-Progetto di Ingegneria del Software
+Progetto di Ingegneria del Software.
+
+## Installazione
+### Linux/MacOS
+
+Copia questa repository ed esegui il file esegui.sh
+`cd run 
+ chmod +x esegui.sh
+ java --module-path javafx-sdk-21/lib --add-modules javafx.controls,javafx.fxml \
+     -jar gestore-libri-1.0-SNAPSHOT-shaded.jar`
+
+
